2012-11-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Minor fixes.

2012-11-20  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c: "use_ansi_colors" option is added to set_config().

	* x_screen.c: Checking the argument of mlclient is moved from
	  set_config() to x_screen_exec_cmd().

	* ml_pty_unix.c: exit(1) is called explicitely if execv() failed.

2012-11-20  Araki Ken  <arakiken@users.sf.net>

	* mltracelog.sh: -b option is added to trachet.

2012-11-19  Araki Ken  <arakiken@users.sf.net>

	* gtk/INSTALL: Minor fixes.

	* tool/accessories/mltracelog.sh: Added.
	  Note that mltracelog.sh depends on trachet.
	  (http://pypi.python.org/pypi/trachet/).

2012-11-18  Araki Ken  <arakiken@users.sf.net>

	* gtk/INSTALL: Updated.

	* mlterm.spec: Fix the version number.

	* gtk/vte.c:
	  - x_display_idling() is called in vte_terminal_timeout().
	  - Cursor blinking is enabled not only by VTE_CURSOR_BLINK_ON
	    but also VTE_CURSOR_BLINK_SYSTEM.
	  - vte_terminal_set_cursor_blinks() is implemented.

2012-11-17  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* ml_vt100_parser.[ch], x_screen.c, x_main_config.c:
	  --colors / "use_ansi_colors" option is added.

	* gtk/vte.c: Duplicate code is removed.

2012-11-16  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, man/mlclient.1, doc/en/PROTOCOL, doc/ja/README.ja:
	  Updated.

	* ml_vt100_parser.[ch], x_screen.c, x_main_config.c:
	  --altbuf / "use_alt_buffer" option is added.

	* main_loop.c, gtk/vte.c, x_screen_manager.c:
	  "click_interval" option is processed in x_screen_manager.c instead
	  of  main_loop.c and gtk/vte.c.

2012-11-15  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja, man/mlterm.1: Updated.

	* version.h.in: 3.1.5 -> 3.1.5 post

	* ml_vt100_parser.[ch], x_screen.c:
	  3 byte rgb color sequence is supported.
	  (<ESC>[38;2;<r>;<g>;<b>m and <ESC>[48;2;<r>;<g>;<b>m)

	* x_color_config.[ch], ml_color.[ch], x_color_cache.[ch]: